# pyctemp

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  TODO  install.sh  setup.cfg
pyctemp/: __argparse__.py  __init__.py  __main__.py  cmd_args.py  function.py  include.py  strip.py  target.py  template.py  type.py
pyctemp/template/array.T.t/: array.T.c  array.T.h
pyctemp/template/grid.T.t/: coordinate.h  grid.T.c  grid.T.h
pyctemp/template/list.T.t/: list.T.c  list.T.h
pyctemp/template/map.K.V.t/: map.K.V.c  map.K.V.h  pair.K.V.h  tmp.c  tmp1.py
test/: Makefile  basic_test.py  test_array_int.c  test_grid_char.c  test_list_int.c  test_map_int_int.c
test/template/array.T.t/: array.T.c  array.T.h
test/template/list.T.t/: list.T.c  list.T.h
test/template/map.K.V.t/: bucket.K.V.h  map.K.V.c  map.K.V.h
test/test/test_map_int_int/: test_map_int_int.c
