[metadata]
name = pyctemp
version = 0.0.2
author = Brandon Mosher
author_email = code.brandon@mosher.xyz
description = Generate C source files from templates 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/brandonmosher/pyctemp
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.6

[options.entry_points]
console_scripts =
    pyctemp = pyctemp.__main__:main
